force-app/main/default/objects/Care_Plan_Stakeholders__c/Care_Plan_Stakeholders__c.object-meta.xml
<CustomObject>
    <label>Care Plan Stakeholders</label>
    <nameField>
        <label>Care Plan Stakeholders Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Care Plan Stakeholders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>