force-app/main/default/objects/Care_Plan_Stakeholders__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Care Plan Stakeholders</relationshipLabel>
    <relationshipName>Care_Plan_Stakeholders</relationshipName>
    <type>Lookup</type>
</CustomField>