force-app/main/default/objects/Care_Plan_Stakeholders__c/fields/How_Often_to_Communicate__c.field-meta.xml
<CustomField>
    <fullName>How_Often_to_Communicate__c</fullName>
    <label>How Often to Communicate</label>
    <length>100</length>
    <type>Text</type>
</CustomField>