force-app/main/default/objects/Care_Plan_Stakeholders__c/fields/Role_in_Care__c.field-meta.xml
<CustomField>
    <fullName>Role_in_Care__c</fullName>
    <label>Role in Care</label>
    <length>100</length>
    <type>Text</type>
</CustomField>